@@ -60,9 +60,11 @@ u'bg' : {u'name' : 'Bulgaria', u'flag' : u'/++resource++country-flags/bg.gif'},
 u'bh' : {u'name' : 'Bahrain', u'flag' : u'/++resource++country-flags/bh.gif'},
 u'bi' : {u'name' : 'Burundi', u'flag' : u'/++resource++country-flags/bi.gif'},
 u'bj' : {u'name' : 'Benin', u'flag' : u'/++resource++country-flags/bj.gif'},
+u'bl' : {u'name' : 'Saint Barthélemy', u'flag' : u'/++resource++country-flags/bl.gif'},
 u'bm' : {u'name' : 'Bermuda', u'flag' : u'/++resource++country-flags/bm.gif'},
 u'bn' : {u'name' : 'Brunei Darussalam', u'flag' : u'/++resource++country-flags/bn.gif'},
 u'bo' : {u'name' : 'Bolivia', u'flag' : u'/++resource++country-flags/bo.gif'},
+u'bq' : {u'name' : 'Bonaire, Sint Eustatius and Saba', u'flag' : u'/++resource++country-flags/bq.gif'},
 u'br' : {u'name' : 'Brazil', u'flag' : u'/++resource++country-flags/br.gif'},
 u'bs' : {u'name' : 'Bahamas', u'flag' : u'/++resource++country-flags/bs.gif'},
 u'bt' : {u'name' : 'Bhutan', u'flag' : u'/++resource++country-flags/bt.gif'},
@@ -86,6 +88,7 @@ u'cr' : {u'name' : 'Costa Rica', u'flag' : u'/++resource++country-flags/cr.gif'}
 u'cs' : {u'name' : 'Serbia and Montenegro', u'flag' : u'/++resource++country-flags/cs.gif'},
 u'cu' : {u'name' : 'Cuba', u'flag' : u'/++resource++country-flags/cu.gif'},
 u'cv' : {u'name' : 'Cape Verde', u'flag' : u'/++resource++country-flags/cv.gif'},
+u'cw' : {u'name' : 'Curaçao', u'flag' : u'/++resource++country-flags/cw.png'},
 u'cx' : {u'name' : 'Christmas Island', u'flag' : u'/++resource++country-flags/cx.gif'},
 u'cy' : {u'name' : 'Cyprus', u'flag' : u'/++resource++country-flags/cy.gif'},
 u'cz' : {u'name' : 'Czech Republic', u'flag' : u'/++resource++country-flags/cz.gif'},
@@ -173,6 +176,7 @@ u'ma' : {u'name' : 'Morocco', u'flag' : u'/++resource++country-flags/ma.gif'},
 u'mc' : {u'name' : 'Monaco', u'flag' : u'/++resource++country-flags/mc.gif'},
 u'md' : {u'name' : 'Moldova Republic of', u'flag' : u'/++resource++country-flags/md.gif'},
 u'me' : {u'name' : 'Montenegro', u'flag' : u'/++resource++country-flags/me.gif'},
+u'mf' : {u'name' : 'Saint Martin (French part)', u'flag' : u'/++resource++country-flags/mf.png'},
 u'mg' : {u'name' : 'Madagascar', u'flag' : u'/++resource++country-flags/mg.gif'},
 u'mh' : {u'name' : 'Marshall Islands', u'flag' : u'/++resource++country-flags/mh.gif'},
 u'mk' : {u'name' : 'Macedonia the former Yugoslavian Republic of', u'flag' : u'/++resource++country-flags/mk.gif'},
@@ -239,8 +243,10 @@ u'sm' : {u'name' : 'San Marino', u'flag' : u'/++resource++country-flags/sm.gif'}
 u'sn' : {u'name' : 'Senegal', u'flag' : u'/++resource++country-flags/sn.gif'},
 u'so' : {u'name' : 'Somalia', u'flag' : u'/++resource++country-flags/so.gif'},
 u'sr' : {u'name' : 'Suriname', u'flag' : u'/++resource++country-flags/sr.gif'},
+u'ss' : {u'name' : 'South Sudan', u'flag' : u'/++resource++country-flags/ss.png'},
 u'st' : {u'name' : 'Sao Tome and Principe', u'flag' : u'/++resource++country-flags/st.gif'},
 u'sv' : {u'name' : 'El Salvador', u'flag' : u'/++resource++country-flags/sv.gif'},
+u'sx' : {u'name' : 'Sint Maarten (Dutch part)', u'flag' : u'/++resource++country-flags/sx.png'},
 u'sy' : {u'name' : 'Syrian Arab Republic', u'flag' : u'/++resource++country-flags/sy.gif'},
 u'sz' : {u'name' : 'Swaziland', u'flag' : u'/++resource++country-flags/sz.gif'},
 u'tc' : {u'name' : 'Turks and Caicos Islands', u'flag' : u'/++resource++country-flags/tc.gif'},
